[package]
name = "bo-cc"
version = "0.1.0"
edition = "2021"

[dependencies]
tl = {version = "0.7.7"}
chardetng = "0.1.17"
flate2 = { version = "1.0", features = ["zlib-ng"], default-features = false }
rust_warc = "1.1.0"
xz2 = "0.1.7"
httparse = "1.8.0"
encoding_rs = "0.8.31"
log = "0.4"
env_logger = "0.9.0"
rayon = "1.7.0"
serde = {version = "1.0.160", features = ["derive"]}
serde_json = "1.0.96"
attohttpc = {version = "0.25.0", features=["compress-zlib-ng"]}


[profile.release]
lto = true          # Enable link-time optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations
# panic = 'abort'   # Abort on panic
